--- a/index.html
+++ b/index.html
@@ -48,6 +48,11 @@
             <h2 class="visually-hidden">Features</h2>
             <ul class="master-hero-list">
                 <li class="master-item">
+                    <div class="master-icons">
+                    <svg class="icon antenna" height="64" width="64">
+                        <use href="./images/sprite.svg#icon-antenna-1"></use>
+                    </svg>
+                    </div>
                     <h3 class="hero-features">Strategy</h3>
                     <p class="paragraph">
                     Our goal is to identify the business
@@ -55,14 +60,29 @@
                     </p>
                 </li>
                 <li class="master-item">
+                    <div class="master-icons">
+                    <svg class="icon diagram" height="64" width="64">
+                        <use href="./images/sprite.svg#icon-diagram-1"></use>
+                    </svg>
+                    </div>
                     <h3 class="hero-features">Punctuality</h3>
                     <p class="paragraph">Bring the key message to the brand's audience for the best price within the shortest possible time.</p>
                 </li>
                 <li class="master-item">
+                    <div class="master-icons">
+                    <svg class="icon clock" height="64" width="64">
+                        <use href="./images/sprite.svg#icon-clock-1"></use>
+                    </svg>
+                    </div>
                     <h3 class="hero-features">Diligence</h3>
                     <p class="paragraph">Research and confirm brands with the strongest digital growth opportunities and minimize risk.</p>
                 </li>
                 <li class="master-item">
+                    <div class="master-icons">
+                    <svg class="icon astronaut" height="64" width="64">
+                        <use href="./images/sprite.svg#icon-astronaut-1"></use>
+                    </svg>
+                    </div>
                     <h3 class="hero-features">Technologies</h3>
                     <p class="paragraph">Design practice focused on digital experiences. We bring forth a deep passion for problem-solving.</p>
                 </li>
@@ -78,6 +98,36 @@
                     <div class="team-text">
                         <h3 class="master-team-text">Mark Guerrero</h3>
                         <p class="paragraph team">Product Designer</p>
+                        <ul class="master-social">
+                            <li class="list-item-social">
+                                <a href="">
+                                    <svg class="icon-social instagram" width="16" height="16">
+                                        <use href="./images/symbol-defs.svg#icon-instagram-2"></use>
+                                    </svg>
+                                </a>
+                            </li>
+                            <li class="list-item-social">
+                                <a href="">
+                                    <svg class="icon-social twitter" width="16" height="16">
+                                        <use href="./images/symbol-defs.svg#icon-twitter-1"></use>
+                                    </svg>
+                                </a>
+                            </li>
+                            <li class="list-item-social">
+                                <a href="">
+                                    <svg class="icon-social facebook" width="16" height="16">
+                                        <use href="./images/symbol-defs.svg#icon-facebook-1"></use>
+                                    </svg>
+                                </a>
+                            </li>
+                            <li class="list-item-social">
+                                <a href="">
+                                    <svg class="icon-social linkedin" width="16" height="16">
+                                        <use href="./images/symbol-defs.svg#icon-linkedin-1"></use>
+                                    </svg>
+                                </a>
+                            </li>
+                        </ul>
                     </div>
                 </li>
                 <li class="list-team">
@@ -85,6 +135,36 @@
                     <div class="team-text">
                         <h3 class="master-team-text">Tom Ford</h3>
                         <p class="paragraph team">Frontend Developer</p>
+                        <ul class="master-social">
+                            <li class="list-item-social">
+                                <a href="">
+                                    <svg class="icon-social instagram" width="16" height="16">
+                                        <use href="./images/symbol-defs.svg#icon-instagram-2"></use>
+                                    </svg>
+                                </a>
+                            </li>
+                            <li class="list-item-social">
+                                <a href="">
+                                    <svg class="icon-social twitter" width="16" height="16">
+                                        <use href="./images/symbol-defs.svg#icon-twitter-1"></use>
+                                    </svg>
+                                </a>
+                            </li>
+                            <li class="list-item-social">
+                                <a href="">
+                                    <svg class="icon-social facebook" width="16" height="16">
+                                        <use href="./images/symbol-defs.svg#icon-facebook-1"></use>
+                                    </svg>
+                                </a>
+                            </li>
+                            <li class="list-item-social">
+                                <a href="">
+                                    <svg class="icon-social linkedin" width="16" height="16">
+                                        <use href="./images/symbol-defs.svg#icon-linkedin-1"></use>
+                                    </svg>
+                                </a>
+                            </li>
+                        </ul>
                     </div>
                 </li>
                 <li class="list-team">
@@ -92,6 +172,36 @@
                     <div class="team-text">
                         <h3 class="master-team-text">Camila Garcia</h3>
                         <p class="paragraph team">Marketing</p>
+                        <ul class="master-social">
+                            <li class="list-item-social">
+                                <a href="">
+                                    <svg class="icon-social instagram" width="16" height="16">
+                                        <use href="./images/symbol-defs.svg#icon-instagram-2"></use>
+                                    </svg>
+                                </a>
+                            </li>
+                            <li class="list-item-social">
+                                <a href="">
+                                    <svg class="icon-social twitter" width="16" height="16">
+                                        <use href="./images/symbol-defs.svg#icon-twitter-1"></use>
+                                    </svg>
+                                </a>
+                            </li>
+                            <li class="list-item-social">
+                                <a href="">
+                                    <svg class="icon-social facebook" width="16" height="16">
+                                        <use href="./images/symbol-defs.svg#icon-facebook-1"></use>
+                                    </svg>
+                                </a>
+                            </li>
+                            <li class="list-item-social">
+                                <a href="">
+                                    <svg class="icon-social linkedin" width="16" height="16">
+                                        <use href="./images/symbol-defs.svg#icon-linkedin-1"></use>
+                                    </svg>
+                                </a>
+                            </li>
+                        </ul>
                     </div>
                 </li>
                 <li class="list-team">
@@ -99,6 +209,36 @@
                     <div class="team-text">
                         <h3 class="master-team-text">Daniel Wilson</h3>
                         <p class="paragraph team">UI Designer</p>
+                        <ul class="master-social">
+                            <li class="list-item-social">
+                                <a href="">
+                                    <svg class="icon-social instagram" width="16" height="16">
+                                        <use href="./images/symbol-defs.svg#icon-instagram-2"></use>
+                                    </svg>
+                                </a>
+                            </li>
+                            <li class="list-item-social">
+                                <a href="">
+                                    <svg class="icon-social twitter" width="16" height="16">
+                                        <use href="./images/symbol-defs.svg#icon-twitter-1"></use>
+                                    </svg>
+                                </a>
+                            </li>
+                            <li class="list-item-social">
+                                <a href="">
+                                    <svg class="icon-social facebook" width="16" height="16">
+                                        <use href="./images/symbol-defs.svg#icon-facebook-1"></use>
+                                    </svg>
+                                </a>
+                            </li>
+                            <li class="list-item-social">
+                                <a href="">
+                                    <svg class="icon-social linkedin" width="16" height="16">
+                                        <use href="./images/symbol-defs.svg#icon-linkedin-1"></use>
+                                    </svg>
+                                </a>
+                            </li>
+                        </ul>
                     </div>
                 </li>
             </ul>
@@ -109,42 +249,60 @@
             <h2 class="master-team-list">Our Portfolio</h2>
         <ul class="portfolio-list">
             <li class="portfolio-item">
+                <div class="portfolio-item-wrap">
                 <img src="./images/banking.jpg" alt="online-banking" width="360" height="300" class="img img-bank"/>
+                <p class="portfolio-wrap-par">14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App</p>
+            </div>
                 <div class="portfolio-text">
                 <h3 class="master-portfolio">Banking App</h3>
                 <p class="paragraph">App</p>
                 </div>
             </li>
             <li class="portfolio-item">
+                <div class="portfolio-item-wrap">
                 <img src="./images/applepay.jpg" alt="payment with phone" width="360" height="300" class="img img-pay"/>
+                <p class="portfolio-wrap-par">14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App</p>
+            </div>
                 <div class="portfolio-text">
                 <h3 class="master-portfolio">Cashless Payment</h3>
                 <p class="paragraph">Marketing</p>
                 </div>
             </li>
             <li class="portfolio-item">
+                <div class="portfolio-item-wrap">
                 <img src="./images/laptop.jpg" alt="laptop" width="360" height="300" class="img img-app"/>
+                <p class="portfolio-wrap-par">14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App</p>
+            </div>
                 <div class="portfolio-text">
                 <h3 class="master-portfolio">Meditation App</h3>
                 <p class="paragraph">App</p>
                 </div>
             </li>
             <li class="portfolio-item">
+                <div class="portfolio-item-wrap">
                 <img src="./images/auto.jpg" alt="auto driving" width="360" height="300" class="img img-taxi"/>
+                <p class="portfolio-wrap-par">14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App</p>
+            </div>
                 <div class="portfolio-text">
                 <h3 class="master-portfolio">Taxi Service</h3>
                 <p class="paragraph">Marketing</p>
                 </div>
             </li>
             <li class="portfolio-item">
+                <div class="portfolio-item-wrap">
                 <img src="./images/phone.jpg" alt="illustrations on phone" width="360" height="300" class="img img-screen"/>
+                <p class="portfolio-wrap-par">14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App</p>
+            </div>
                 <div class="portfolio-text">
                 <h3 class="master-portfolio">Screen Illustrations</h3>
                 <p class="paragraph">Design</p>
                 </div>
             </li>
             <li class="portfolio-item">
+                <div class="portfolio-item-wrap">
                 <img src="./images/frau.jpg" alt="women in orange pullower" width="360" height="300" class="img img-frau"/>
+                <p class="portfolio-wrap-par">14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App</p>
+            </div>
                 <div class="portfolio-text">
                 <h3 class="master-portfolio">Online Courses</h3>
                 <p class="paragraph">Marketing</p>
@@ -155,9 +313,44 @@
         </section>
     </main>
     <footer class="footer">
-        <div class="container">
+        <div class="container footer-container">
+                <div class="footer-logopar">
                 <a href="./index.html" class="logo-footer">Web<span class="white-logo-footer">Studio</span></a>
                 <p class="paragraph-footer">Increase the flow of customers and sales for your business with digital marketing & growth solutions.</p>
+                </div>
+                <div class="footer-social">
+            <p class="footer-social-text">Social media</p>
+            <ul class="master-social-footer">
+            <li class="list-item-social">
+                <a href="">
+                    <svg class="icon-social instagram" width="16" height="16">
+                        <use href="./images/symbol-defs.svg#icon-instagram-2"></use>
+                    </svg>
+                </a>
+            </li>
+            <li class="list-item-social">
+                <a href="">
+                    <svg class="icon-social twitter" width="16" height="16">
+                        <use href="./images/symbol-defs.svg#icon-twitter-1"></use>
+                    </svg>
+                </a>
+            </li>
+            <li class="list-item-social">
+                <a href="">
+                    <svg class="icon-social facebook" width="16" height="16">
+                        <use href="./images/symbol-defs.svg#icon-facebook-1"></use>
+                    </svg>
+                </a>
+            </li>
+            <li class="list-item-social">
+                <a href="">
+                    <svg class="icon-social linkedin" width="16" height="16">
+                        <use href="./images/symbol-defs.svg#icon-linkedin-1"></use>
+                    </svg>
+                </a>
+            </li>
+            </ul>
+        </div>
         </div>
     </footer>
 </body>
