--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
                 <li class="master-item">
                     <div class="master-icons">
                     <svg class="icon antenna" height="64" width="64">
-                        <use href="./images/sprite.svg#icon-antenna-1"></use>
+                        <use href="./images/symbol-defs.svg#icon-antenna-1"></use>
                     </svg>
                     </div>
                     <h3 class="hero-features">Strategy</h3>
@@ -62,7 +62,7 @@
                 <li class="master-item">
                     <div class="master-icons">
                     <svg class="icon diagram" height="64" width="64">
-                        <use href="./images/sprite.svg#icon-diagram-1"></use>
+                        <use href="./images/symbol-defs.svg#icon-diagram-1"></use>
                     </svg>
                     </div>
                     <h3 class="hero-features">Punctuality</h3>
@@ -71,7 +71,7 @@
                 <li class="master-item">
                     <div class="master-icons">
                     <svg class="icon clock" height="64" width="64">
-                        <use href="./images/sprite.svg#icon-clock-1"></use>
+                        <use href="./images/symbol-defs.svg#icon-clock-1"></use>
                     </svg>
                     </div>
                     <h3 class="hero-features">Diligence</h3>
@@ -80,7 +80,7 @@
                 <li class="master-item">
                     <div class="master-icons">
                     <svg class="icon astronaut" height="64" width="64">
-                        <use href="./images/sprite.svg#icon-astronaut-1"></use>
+                        <use href="./images/symbol-defs.svg#icon-astronaut-1"></use>
                     </svg>
                     </div>
                     <h3 class="hero-features">Technologies</h3>
@@ -323,28 +323,28 @@
             <ul class="master-social-footer">
             <li class="list-item-social">
                 <a href="">
-                    <svg class="icon-social instagram" width="16" height="16">
+                    <svg class="icon-social instagram" width="24" height="24">
                         <use href="./images/symbol-defs.svg#icon-instagram-2"></use>
                     </svg>
                 </a>
             </li>
             <li class="list-item-social">
                 <a href="">
-                    <svg class="icon-social twitter" width="16" height="16">
+                    <svg class="icon-social twitter" width="24" height="24">
                         <use href="./images/symbol-defs.svg#icon-twitter-1"></use>
                     </svg>
                 </a>
             </li>
             <li class="list-item-social">
                 <a href="">
-                    <svg class="icon-social facebook" width="16" height="16">
+                    <svg class="icon-social facebook" width="24" height="24">
                         <use href="./images/symbol-defs.svg#icon-facebook-1"></use>
                     </svg>
                 </a>
             </li>
             <li class="list-item-social">
                 <a href="">
-                    <svg class="icon-social linkedin" width="16" height="16">
+                    <svg class="icon-social linkedin" width="24" height="24">
                         <use href="./images/symbol-defs.svg#icon-linkedin-1"></use>
                     </svg>
                 </a>
