--- a/index.html
+++ b/index.html
@@ -322,28 +322,28 @@
             <p class="footer-social-text">Social media</p>
             <ul class="master-social-footer">
             <li class="list-item-social">
-                <a href="">
+                <a href="" class="list-item-link">
                     <svg class="icon-social instagram" width="24" height="24">
                         <use href="./images/icons.svg#icon-instagram-2"></use>
                     </svg>
                 </a>
             </li>
             <li class="list-item-social">
-                <a href="">
+                <a href="" class="list-item-link">
                     <svg class="icon-social twitter" width="24" height="24">
                         <use href="./images/icons.svg#icon-twitter-1"></use>
                     </svg>
                 </a>
             </li>
             <li class="list-item-social">
-                <a href="">
+                <a href="" class="list-item-link">
                     <svg class="icon-social facebook" width="24" height="24">
                         <use href="./images/icons.svg#icon-facebook-1"></use>
                     </svg>
                 </a>
             </li>
             <li class="list-item-social">
-                <a href="">
+                <a href="" class="list-item-link">
                     <svg class="icon-social linkedin" width="24" height="24">
                         <use href="./images/icons.svg#icon-linkedin-1"></use>
                     </svg>
