--- a/index.html
+++ b/index.html
@@ -101,28 +101,28 @@
                         <ul class="master-social">
                             <li class="list-item-social">
                                 <a href="">
-                                    <svg class="icon-social instagram" width="16" height="16">
+                                    <svg class="icon-social" width="16" height="16">
                                         <use href="./images/icons.svg#icon-instagram-2"></use>
                                     </svg>
                                 </a>
                             </li>
                             <li class="list-item-social">
                                 <a href="">
-                                    <svg class="icon-social twitter" width="16" height="16">
+                                    <svg class="icon-social" width="16" height="16">
                                         <use href="./images/icons.svg#icon-twitter-1"></use>
                                     </svg>
                                 </a>
                             </li>
                             <li class="list-item-social">
                                 <a href="">
-                                    <svg class="icon-social facebook" width="16" height="16">
+                                    <svg class="icon-social" width="16" height="16">
                                         <use href="./images/icons.svg#icon-facebook-1"></use>
                                     </svg>
                                 </a>
                             </li>
                             <li class="list-item-social">
                                 <a href="">
-                                    <svg class="icon-social linkedin" width="16" height="16">
+                                    <svg class="icon-social" width="16" height="16">
                                         <use href="./images/icons.svg#icon-linkedin-1"></use>
                                     </svg>
                                 </a>
@@ -138,28 +138,28 @@
                         <ul class="master-social">
                             <li class="list-item-social">
                                 <a href="">
-                                    <svg class="icon-social instagram" width="16" height="16">
+                                    <svg class="icon-social" width="16" height="16">
                                         <use href="./images/icons.svg#icon-instagram-2"></use>
                                     </svg>
                                 </a>
                             </li>
                             <li class="list-item-social">
                                 <a href="">
-                                    <svg class="icon-social twitter" width="16" height="16">
-                                        <use href="./images/icons.svg#icon-twitter-1"></use>
+                                    <svg class="icon-social" width="16" height="16">
+                                        <use href="./images/icons.svg#icon-twitter-1" class=""></use>
                                     </svg>
                                 </a>
                             </li>
                             <li class="list-item-social">
                                 <a href="">
-                                    <svg class="icon-social facebook" width="16" height="16">
+                                    <svg class="icon-social" width="16" height="16">
                                         <use href="./images/icons.svg#icon-facebook-1"></use>
                                     </svg>
                                 </a>
                             </li>
                             <li class="list-item-social">
                                 <a href="">
-                                    <svg class="icon-social linkedin" width="16" height="16">
+                                    <svg class="icon-social" width="16" height="16">
                                         <use href="./images/icons.svg#icon-linkedin-1"></use>
                                     </svg>
                                 </a>
@@ -175,28 +175,28 @@
                         <ul class="master-social">
                             <li class="list-item-social">
                                 <a href="">
-                                    <svg class="icon-social instagram" width="16" height="16">
+                                    <svg class="icon-social" width="16" height="16">
                                         <use href="./images/icons.svg#icon-instagram-2"></use>
                                     </svg>
                                 </a>
                             </li>
                             <li class="list-item-social">
                                 <a href="">
-                                    <svg class="icon-social twitter" width="16" height="16">
+                                    <svg class="icon-social" width="16" height="16">
                                         <use href="./images/icons.svg#icon-twitter-1"></use>
                                     </svg>
                                 </a>
                             </li>
                             <li class="list-item-social">
                                 <a href="">
-                                    <svg class="icon-social facebook" width="16" height="16">
+                                    <svg class="icon-social" width="16" height="16">
                                         <use href="./images/icons.svg#icon-facebook-1"></use>
                                     </svg>
                                 </a>
                             </li>
                             <li class="list-item-social">
                                 <a href="">
-                                    <svg class="icon-social linkedin" width="16" height="16">
+                                    <svg class="icon-social" width="16" height="16">
                                         <use href="./images/icons.svg#icon-linkedin-1"></use>
                                     </svg>
                                 </a>
@@ -212,28 +212,28 @@
                         <ul class="master-social">
                             <li class="list-item-social">
                                 <a href="">
-                                    <svg class="icon-social instagram" width="16" height="16">
+                                    <svg class="icon-social" width="16" height="16">
                                         <use href="./images/icons.svg#icon-instagram-2"></use>
                                     </svg>
                                 </a>
                             </li>
                             <li class="list-item-social">
                                 <a href="">
-                                    <svg class="icon-social twitter" width="16" height="16">
+                                    <svg class="icon-social" width="16" height="16">
                                         <use href="./images/icons.svg#icon-twitter-1"></use>
                                     </svg>
                                 </a>
                             </li>
                             <li class="list-item-social">
                                 <a href="">
-                                    <svg class="icon-social facebook" width="16" height="16">
+                                    <svg class="icon-social" width="16" height="16">
                                         <use href="./images/icons.svg#icon-facebook-1"></use>
                                     </svg>
                                 </a>
                             </li>
                             <li class="list-item-social">
                                 <a href="">
-                                    <svg class="icon-social linkedin" width="16" height="16">
+                                    <svg class="icon-social" width="16" height="16">
                                         <use href="./images/icons.svg#icon-linkedin-1"></use>
                                     </svg>
                                 </a>
